bk_ida/gccida/c0/compute_branch_probabilities
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:707:1: error: use of undeclared identifier 'bb_info_1'
bb_info_1 *bi; // [rsp+E0h] [rbp-A0h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:707:12: error: use of undeclared identifier 'bi'
bb_info_1 *bi; // [rsp+E0h] [rbp-A0h] 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:818:1: error: use of undeclared identifier 'bi'
bi = ( bb_info_1 *)v4->aux; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:818:19: error: expected expression
bi = ( bb_info_1 *)v4->aux; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:818:8: error: use of undeclared identifier 'bb_info_1'
bi = ( bb_info_1 *)v4->aux; 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:819:19: error: use of undeclared identifier 'bi'
if ( ( *( _BYTE *)bi & 1) == 0 ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:821:6: error: use of undeclared identifier 'bi'
if ( bi->succ_count ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:823:7: error: use of undeclared identifier 'bi'
if ( !bi->pred_count ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:829:12: error: use of undeclared identifier 'bi'
*( _BYTE *)bi = *( _BYTE *)bi & 0xFE | 1; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:829:28: error: use of undeclared identifier 'bi'
*( _BYTE *)bi = *( _BYTE *)bi & 0xFE | 1; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:839:12: error: use of undeclared identifier 'bi'
*( _BYTE *)bi = *( _BYTE *)bi & 0xFE | 1; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:839:28: error: use of undeclared identifier 'bi'
*( _BYTE *)bi = *( _BYTE *)bi & 0xFE | 1; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:843:19: error: use of undeclared identifier 'bi'
if ( ( *( _BYTE *)bi & 1) != 0 ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:845:6: error: use of undeclared identifier 'bi'
if ( bi->succ_count == 1 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:861:3: error: use of undeclared identifier 'bi'
--bi->succ_count; 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:865:6: error: use of undeclared identifier 'bi'
if ( bi->pred_count == 1 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/profile.c:881:3: error: use of undeclared identifier 'bi'
--bi->pred_count; 
  ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_branch_probabilities/src/obj/profile.o] Error 1
